<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pokretači</string>
    <string name="actionbar_title">Pokretači</string>
    <string name="ok">OK</string>
    <string name="welcome_message">BUDI POKRETAČ, A NE PASIVNI POSMATRAČ!\r\n\r\nOvaj sajt i app su nastali kao inicijativa Srbije u pokretu da pomogne građanima da REŠE PROBLEM u svom okruženju, organizovanjem zajednice koju taj problem pogađa.\r\nŠto veći broj građana preuzme odgovornost da napravi akciju koja će proizvesti makar malu promenu u zajednici, Srbija će biti bolje mesto za život.</string>
    <string name="resi_problem">REŠI PROBLEM</string>
    <string name="choose_account">Izaberite nalog</string>
    <string name="choose_account_confirmation">Potrebno je da odobrite našoj aplikaciji login sa vašim google nalogom.</string>
	<string name="communication_error">Greška u komunikaciji</string>
	<string name="not_logged_in_error_dialog">Za ovu operaciju je potrebno da ste ulogovani.</string>
    
	<!-- Drawer positions are hardcoded, and if you change this
	you also need to change ExpandableListView.OnGroupClickListener.onGroupClick() and EpandableListView.OnChildClickListener.onChildClick() -->
    <string-array name="drawer_array">
        <item>O nama</item>
        <item>Kategorije problema</item>
        <item>Moj profil</item>
        <item>Promena login statusa</item>
    </string-array>
    <string name="drawer_item_3_login">Uloguj se</string>
    <string name="drawer_item_3_logout">Izloguj se</string>
    
    <string-array name="drawer_array_child_category">
        <item>Svi problemi</item>
        <item>Najpopularniji</item>
        <item>Najnoviji</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Problem details -->
    <string name="page_details">Pregled problema</string>
    <string name="page_comments">Komentari</string>
    <string name="support">Podrži</string>
    <string name="i_support">Podržavam</string>
    <string name="join">Priključi se</string>

    <!-- Comments -->
    <string name="leave_comment">KOMENTAR</string>
    <string name="leave_comment_hing">Napiši komentar</string>
    <string name="send_comment">POŠALJI</string>
    <string name="comment_too_short">Komentar je suviše kratak</string>

    <!-- ProfileActivity -->
    <string name="submited_problems">Prijavljeni problemi</string>
    <string name="supported_problems">Podržani problemi</string>
    <string name="profile_stats">Prijavljenih problema: %1$d\r\nPodržanih problema:%2$d</string>

    <!-- Submit Problem -->
    <string name="address">Adresa</string>
    <string name="address_details">Unesi naziv ulice, pijace, parka</string>
    <string name="problem_name">Naziv inicijative</string>
    <string name="problem_name_details">Daj kratak naziv inicijativi za rešavanje problema</string>
    <string name="problem_description">Opis problema</string>
    <string name="problem_description_details">Opiši problem što je preciznije moguće u nekoliko rečenica</string>
    <string name="problem_people">Ko su vaši ljudi</string>
    <string name="problem_people_details">Ko će imati koristi od rešenja ovog problema?</string>
    <string name="select_problem_categories">Odredi vrstu problema</string>
    <string name="cables">Žice i cevi</string>
    <string name="trafic">Saobraćaj</string>
    <string name="construction">Gradnja</string>
    <string name="improvement">Unapr.</string>
    <string name="flora_and_fauna">Flora i Fauna</string>
    <string name="sport">Sport</string>
    <string name="vandalism">Vandalizam</string>
    <string name="criminal">Kriminal</string>
    <string name="immoral">Nemoral</string>
    <string name="ugly">Ruglo</string>
    <string name="dangerous">Opasno</string>
    <string name="submiting">Upload u toku</string>
    <string name="submit_sucess">Komanda je uspješno izvršena</string>
    <string name="submit_failure">Došlo je do greške...</string>
    <string name="submit_goal_marker_title">Lokacija problema</string>
    <string name="submit_goal_marker_details">Dugim klikom prevucite marker na željenu lokaciju</string>
    <string name="submit_goal_location">Podesi lokaciju</string>
    <string name="you_must_submit_location">Morate prvo podesiti lokaciju</string>
    <string name="you_must_have_title_and_description">Morate popuniti naziv inicijative i opis problema</string>

</resources>