<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/location_image"
                android:layout_width="match_parent"
                android:clickable="true"
                android:onClick="setMarker"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="#33B5E5" android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_details" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/problem_name"
                android:textColor="#33B5E5"  android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/problem_name_details" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/problem_description"
                android:textColor="#33B5E5"  android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/problem_description_details" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/problem_people"
                android:textColor="#33B5E5" android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/problem_people_details" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_problem_categories"
                android:textColor="#33B5E5" android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cables"
                    android:textColor="#33B5E5" android:textSize="17sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trafic"
                    android:textColor="#33B5E5" android:textSize="17sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/construction"
                    android:textColor="#33B5E5" android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/improvement"
                    android:textColor="#33B5E5" android:textSize="17sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flora_and_fauna"
                    android:textColor="#33B5E5" android:textSize="17sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sport"
                    android:textColor="#33B5E5" android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vandalism"
                    android:textColor="#33B5E5" android:textSize="17sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/criminal"
                    android:textColor="#33B5E5" android:textSize="17sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/immoral"
                    android:textColor="#33B5E5" android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ugly"
                    android:textColor="#33B5E5" android:textSize="17sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dangerous"
                    android:textColor="#33B5E5" android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/take_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="takePicture"
                android:src="@drawable/take_photo" />

            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="40dp"
                android:background="@drawable/resi_problem"
                android:gravity="center"
                android:onClick="submitProblem"
                android:text="@string/resi_problem"
                android:textColor="#FFFFFF" android:textSize="17sp" />
        </LinearLayout>
    </ScrollView>
    <!-- The navigation drawer -->

    <ExpandableListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFFFFF"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:groupIndicator="@null" />

</android.support.v4.widget.DrawerLayout>